--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,15 +1,21 @@
 ---
 version: 2
 updates:
-  - package-ecosystem: gomod
-    directory: /
+  - package-ecosystem: "gomod"
+    directory: "/"
     schedule:
-      interval: weekly
-  - package-ecosystem: docker
-    directory: /
+      interval: "weekly"
+    commit-message:
+      prefix: "fix(deps)"
+
+  - package-ecosystem: "docker"
+    directory: "/"
     schedule:
-      interval: weekly
-  - package-ecosystem: github-actions
-    directory: /
+      interval: "weekly"
+    commit-message:
+      prefix: "fix(deps)"
+
+  - package-ecosystem: "github-actions"
+    directory: ""/"
     schedule:
-      interval: weekly
+      interval: "weekly"
