chore: update test workflow

--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -1,12 +1,9 @@
 ---
-name: PR
+name: test
 
 on:
+  push:
   pull_request:
-    paths:
-      - '**.go'
-      - 'go.mod'
-      - 'go.sum'
 
 jobs:
   test:
@@ -14,7 +11,7 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - uses: actions/setup-go@v4
+      - uses: actions/setup-go@v4.0.1
         with:
           go-version: '1.21'
 
